сделана локализация; разбивка на модули

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -22,5 +22,8 @@
   "firstName": "First Name",
   "patronymic": "Patronymic",
   "alreadyHaveAnAccount": "Already have an account?",
-  "signUpLogIn": "Sign In"
+  "signUpLogIn": "Sign In",
+  "bottomNavigationBarHome": "Главная",
+  "bottomNavigatiomBarPerson": "Профиль",
+  "bottomNavigationBarHistory": "История"
 }
