--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -25,5 +25,9 @@
   "signUpLogIn": "Sign In",
   "bottomNavigationBarHome": "Главная",
   "bottomNavigatiomBarPerson": "Профиль",
-  "bottomNavigationBarHistory": "История"
+  "bottomNavigationBarHistory": "История",
+  "home_page_screan_total": "Всего",
+  "main_screan_no_data": "Нет данных",
+  "main_screan_all_products": "Все продукты",
+  "main_screan_get_new_product": "Оформить новый продукт"
 }
